Migrate PSJSFBaseTag from legacy MethodBinding/ValueBinding to EL MethodExpression/ValueExpression